common/ops/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bass-dev
  labels:
    env: dev
    app.kubernetes.io/part-of: bass
